# spotify-playlist-shuffler

./: README.md  pyproject.toml  shuffler.ipynb
